# rb_generator

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
RBGeneratorCpp/: CMakeLists.txt
RBGeneratorCpp/Pybinder/: CMakeLists.txt  FreqAllocatorCpp.cpp  RBGeneratorCpp.cpp  rb22.h  rb44.h
RBGeneratorCpp/src/: clifford22.h  clifford44.h  utils.h
RBGeneratorCpp/test/: CMakeLists.txt  main.cpp
rb_generator/: __init__.py
test/: test.py
