[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "rb_generator"
dynamic = ["version"]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]

[project.urls]
"Source Code" = "https://github.com/Agony5757/RBGeneratorCpp"

[tool.setuptools]
packages = ["rb_generator"]

[tool.setuptools_scm]
version_file = "rb_generator/_version.py"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "pp* *-musllinux_*"
before-build = "pip install numpy"
build-verbosity = 1

[tool.cibuildwheel.environment]
CMAKE_ARGS = "-DCMAKE_BUILD_PARALLEL_LEVEL=4"

[tool.cibuildwheel.linux]
before-all = "yum install -y libomp-devel || apt-get install -y libomp-dev"

[tool.cibuildwheel.macos]
before-all = "brew install libomp || true"

[tool.cibuildwheel.windows]
before-all = ""
